--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -46,7 +46,7 @@
         <MudAppBar Elevation="1">
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
             <MudText Typo="Typo.h5" Class="ml-3">
-                <a href="/" style="text-decoration: none; color: inherit;">Website Bán Sách</a>
+                <a href="/" style="text-decoration: none; color: inherit;">Nhà Sách Số 1</a>
             </MudText>
             <MudSpacer />
             <!-- Bắt đầu phần AppBar từ Home.razor -->
