--- a/Components/Pages/Donhang.razor
+++ b/Components/Pages/Donhang.razor
@@ -49,7 +49,7 @@
                 <MudItem>Ngày mua: @bill.Created_at</MudItem>
             </MudItem>
             <MudSpacer />
-            <MudItem md="6" xs="6" Style="color:red; text-align:right" ><strong>@bill.Status</strong></MudItem>
+            <MudItem md="6" xs="6" Style="color:#e74c3c; text-align:right"><strong>@bill.Status</strong></MudItem>
         </MudGrid>
 
         <table>
@@ -72,7 +72,7 @@
             <MudItem md="12" xs="12" Style="text-align:right">Ngày giao: @bill.Updated_at</MudItem>
         
             <MudItem md="6" xs="6"><strong>Tổng tiền:</strong></MudItem>
-            <MudItem md="6" xs="6" Style="color:red; text-align:right"><strong>@bill.TotalPrice</strong></MudItem>
+            <MudItem md="6" xs="6" Style="color:#e74c3c; text-align:right"><strong>@bill.TotalPrice</strong></MudItem>
         </MudGrid>
     </MudPaper>
 }
