--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -19,24 +19,25 @@
 <MudContainer MaxWidth="MaxWidth.Large" Class="pa-0">
     <!-- Ảnh nổi bật -->
     <MudItem md="2"></MudItem>
-    <div style="display: flex; justify-content: center; width: 100%; margin-top: 20px;">
-        @if (imgs == null)
-        {
-            <MudSpinner Color="Color.Primary" Size="Size.Large" />
-        }
-        else
-        {
-            <MudCarousel TData="string" Interval="4000" style="height:300px; width:100%;display: flex; justify-content: center;">
-                @foreach (var img in imgs)
-                {
-                    <MudCarouselItem>
-                        <img src="@img?.img" alt="Product " style="width:100%; height: 100%; object-fit: cover; filter: grayscale(0.3);" />
-                        <MudCarouselItemText Style="background-color: rgba(51, 51, 51, 0.7); color: #EAEAEA;">Product 1</MudCarouselItemText>
-                    </MudCarouselItem>
-                }
-            </MudCarousel>
-        }
-    </div>
+   <div style="display: flex; justify-content: center; width: 100%; margin-top: 20px;">
+    @if (imgs == null || !imgs.Any())
+    {
+        <MudSpinner Color="Color.Primary" Size="Size.Large" />
+    }
+    else
+    {
+            <MudCarousel TData="string" Interval="4000" InitialItemIndex="0" ShowBullets="false" style="height:300px; width:100%; display: flex; justify-content: center;">
+            @foreach (var img in imgs)
+            {
+                <MudCarouselItem>
+                    <img src="@img?.img" alt="Product" style="width:100%; height: 100%; object-fit: cover; filter: grayscale(0.3);" />
+                    <MudCarouselItemText Style="background-color: rgba(51, 51, 51, 0.7); color: #EAEAEA;">Product</MudCarouselItemText>
+                </MudCarouselItem>
+            }
+        </MudCarousel>
+    }
+</div>
+
 
    <MudCard>
     <MudCardContent>
@@ -52,7 +53,7 @@
                         <MudItem sm="4" md="2" xs="6" Style="margin: 10px;">
                             <Button Class="button" @onclick="() => Detail(product.ProductId)" Style="width: 100%; padding: 0;">
                                 <div>
-                                    <div Style="position: absolute;color:red; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
+                                    <div Style="position: absolute;color:#e74c3c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
                                         - @item.Rate%
                                     </div>
                                     <img ObjectFit="ObjectFit.Cover" Src="@product.Img" Height="200" Class="rounded-lg" />
@@ -63,7 +64,7 @@
                                 <div style="text-decoration:line-through; font-size: 13">
                                     @string.Format(new CultureInfo("vi-VN"), "{0:N0}", product.SellPrice) vnđ
                                 </div>
-                                <div style="color: red">
+                                <div style="color: #e74c3c">
                                     @string.Format(new CultureInfo("vi-VN"), "{0:N0}", item.SellPrice) vnđ
                                 </div>
                             </Button>
@@ -93,7 +94,7 @@
                                 <div>
                                     @if (discount != null && discount.ProductId == item.ProductId)
                                     {
-                                        <div Style="position: absolute;color:red; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
+                                        <div Style="position: absolute;color:#e74c3c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
                                             - @discount.Rate%
                                         </div>
                                     }
@@ -109,7 +110,7 @@
                                     <div style="text-decoration:line-through; font-size: 13">
                                         @string.Format(new CultureInfo("vi-VN"), "{0:N0}", product.SellPrice) vnđ
                                     </div>
-                                    <div style="color: red;">
+                                    <div style="color: #e74c3c;">
                                         @string.Format(new CultureInfo("vi-VN"), "{0:N0}", discount.SellPrice) vnđ
                                     </div>
                                 }
@@ -148,7 +149,7 @@
                                 <div>
                                     @if (discount != null)
                                     {
-                                        <div Style="position: absolute;color:red; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
+                                        <div Style="position: absolute;color:#e74c3c; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
                                             - @discount.Rate%
                                         </div>
                                     }
@@ -164,7 +165,7 @@
                                     <div style="text-decoration:line-through; font-size: 13">
                                         @string.Format(new CultureInfo("vi-VN"), "{0:N0}", product.SellPrice) vnđ
                                     </div>
-                                    <div style="color: red;">
+                                    <div style="color: #e74c3c;">
                                         @string.Format(new CultureInfo("vi-VN"), "{0:N0}", discount.SellPrice) vnđ
                                     </div>
                                 }
