--- a/Components/Pages/Ql/Thongkedoanhthu.razor
+++ b/Components/Pages/Ql/Thongkedoanhthu.razor
@@ -16,9 +16,9 @@
 {
     <h3>Bạn chưa được cấp quyền để xem trang này.</h3>
 }
-else if (userRoleId == "3")
+else if (userRoleId == "3" || userRoleId == "1")
 {
-    <div style="display: flex; justify-content: center; padding: 30px;">
+    <div style="display: flex; justify-content: center; padding-top: 30px;">
         <h2 style="font-family: Arial;">Thống kê doanh thu tháng @DateTime.Now.Month</h2>
     </div>
     <div style="font-size:15px">
@@ -30,12 +30,12 @@ else if (userRoleId == "3")
                 Doanh thu: @doanhThu.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))
             </MudPaper>
             <MudPaper Class="pa-16 ma-2" Elevation="3">
-                Dự đoán doanh thu tháng tới: @duDoanDoanhThu.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))
+                Dự đoán tháng tới: @duDoanDoanhThu.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))
             </MudPaper>
         </div>
     </div>
 
-    <div Class="py-2 px-2 mt-2">
+    <div Class="py-1 px-1 mt-1">
         <MudGrid Justify="Justify.FlexStart" Spacing="1">
             <MudItem xs="6" sm="3" lg="2">
                 <MudDatePicker Label="Từ ngày" Margin="Margin.Dense" Culture="@GetVietNamCulture()"
@@ -45,21 +45,7 @@ else if (userRoleId == "3")
                 <MudDatePicker Label="Đến ngày" Margin="Margin.Dense" Culture="@GetVietNamCulture()"
                                @bind-Date="toDate" Variant="Variant.Outlined" Color="Color.Secondary" MaxDate="@DateTime.Now" />
             </MudItem>
-
-
-            <MudHidden Breakpoint="Breakpoint.LgAndDown">
-                <MudItem xs="6">
-                    <MudSpacer></MudSpacer>
-                </MudItem>
-            </MudHidden>
-            @*  <MudMenu Label="Trạng thái" Color="Color.Primary" Class="px-4">
-                <MudMenuItem>Đang chuẩn bị hàng</MudMenuItem>
-                <MudMenuItem>Đang giao</MudMenuItem>
-                <MudMenuItem>Đã giao</MudMenuItem>
-            </MudMenu> 
-            <MudItem>
-                <MudButton Variant="Variant.Filled" FullWidth Class="px-4" StartIcon="@Icons.Material.Filled.Search" Color="Color.Primary">Tìm kiếm</MudButton>
-            </MudItem> *@
+           
         </MudGrid>
         <MudMenu Class="d-block" LockScroll="true" PositionAtCursor="true" ActivationEvent="MouseEvent.RightClick">
             <!-- ActivatorContent để kích hoạt menu -->
@@ -91,10 +77,14 @@ else if (userRoleId == "3")
                             @(string.IsNullOrEmpty(context["TotalPrice"].ToString()) ? "0" : Convert.ToDecimal(context["TotalPrice"]).ToString("#,##0")) vnđ
                         </MudTd>
                         <MudTd DataLabel="Trạng thái thanh toán">@context["PayStatus"].ToString()</MudTd>
+                        <MudTd DataLabel="Trạng thái đơn hàng">@context["OrderStatus"].ToString()</MudTd>
                         <MudTd DataLabel="Ngày đặt">
                             @(DateTime.Parse(context["BillCreatedAt"].ToString()).ToString("dd/MM/yyyy"))
                         </MudTd>
                     </RowTemplate>
+                    <PagerContent>
+                        <MudTablePager PageSizeOptions="new int[]{10, 20}" />
+                    </PagerContent>
                 </MudTable>
             </ActivatorContent>
 
@@ -120,106 +110,6 @@ else if (userRoleId == "3")
     }
 
 }
-else if (userRoleId == "1")
-{
-    <div style="display: flex; justify-content: center; padding: 30px;">
-        <h2 style="font-family: Arial;">Thống kê doanh thu</h2>
-    </div>
-    <div style="font-size:15px">
-        <div class="d-flex justify-space-between align-center pa-8">
-            <MudPaper Class="pa-16 ma-2" Elevation="3" Style="word-wrap: break-word;">Người dùng: @users.Count</MudPaper>
-            <MudPaper Class="pa-16 ma-2" Elevation="3" Style="word-wrap: break-word;">Đơn hàng: @soDon</MudPaper>
-            <MudPaper Class="pa-16 ma-2" Elevation="3" Style="word-wrap: break-word;">Doanh số: @doanhSo sản phẩm</MudPaper>
-            <MudPaper Class="pa-16 ma-2" Elevation="3" Style="word-wrap: break-word;">
-                Doanh thu: @doanhThu.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))
-            </MudPaper>
-           @*  <MudPaper Class="pa-16 ma-2" Elevation="3" Style="word-wrap: break-word;">
-                Dự đoán doanh thu tháng tới: @duDoanDoanhThu.ToString("C0", System.Globalization.CultureInfo.GetCultureInfo("vi-VN"))
-            </MudPaper> *@
-        </div>
-    </div>
-
-    <div Class="py-2 px-2 mt-2">
-        <MudGrid Justify="Justify.FlexStart" Spacing="1">
-            <MudItem xs="6" sm="3" lg="2">
-                <MudDatePicker Label="Từ ngày" Margin="Margin.Dense" Culture="@GetVietNamCulture()" @bind-Date="fromDate" Variant="Variant.Outlined" Color="Color.Success" MaxDate="@DateTime.Now" />
-            </MudItem>
-            <MudItem xs="6" sm="3" lg="2">
-                <MudDatePicker Label="Đến ngày" Margin="Margin.Dense" Culture="@GetVietNamCulture()" @bind-Date="toDate" Variant="Variant.Outlined" Color="Color.Secondary" MaxDate="@DateTime.Now" />
-            </MudItem>
-            <MudHidden Breakpoint="Breakpoint.LgAndDown">
-                <MudItem xs="6">
-                    <MudSpacer></MudSpacer>
-                </MudItem>
-            </MudHidden>
-            @*  <MudMenu Label="Trạng thái" Color="Color.Primary" Class="px-4">
-                <MudMenuItem>Đang chuẩn bị hàng</MudMenuItem>
-                <MudMenuItem>Đang giao</MudMenuItem>
-                <MudMenuItem>Đã giao</MudMenuItem>
-            </MudMenu> 
-            <MudItem>
-                <MudButton Variant="Variant.Filled" FullWidth Class="px-4" StartIcon="@Icons.Material.Filled.Search" Color="Color.Primary">Tìm kiếm</MudButton>
-            </MudItem>*@
-        </MudGrid>
-        <MudMenu Class="d-block" LockScroll="true" PositionAtCursor="true" ActivationEvent="MouseEvent.RightClick">
-            <ActivatorContent>
-                <MudTable Dense="true" Class="mt-3" Bordered Height="auto"
-                          ReadOnly="false" HeaderClass="pa-1" Items="filteredData"
-                          T="DataRow" MultiSelection="false" RowClass="pa-0 cursor-pointer" Hover="true" Breakpoint="Breakpoint.None"
-                          @bind-SelectedItem="@selectedItem" HorizontalScrollbar="true">
-                    <HeaderContent>
-                        <MudTh>Đối tượng</MudTh>
-                        <MudTh>BillID</MudTh>
-                        <MudTh>Số lượng</MudTh>
-                        <MudTh>Tổng tiền</MudTh>
-                        <MudTh>Trạng thái</MudTh>
-                        <MudTh>Ngày</MudTh>
-                    </HeaderContent>
-                    <RowTemplate>
-                        <MudTd DataLabel="Đối tượng">
-                            @context["UserName"].ToString()
-                        </MudTd>
-                        <MudTd DataLabel="BillID">
-                            @context["BillId"]
-                        </MudTd>
-                        <MudTd DataLabel="Số lượng">
-                            @context["TotalPrice"]
-                        </MudTd>
-                        <MudTd Style="text-align:right;" DataLabel="Tổng tiền">
-                            @(string.IsNullOrEmpty(context["TotalPrice"].ToString()) ? "0" : Convert.ToDecimal(context["TotalPrice"]).ToString("#,##0")) vnđ
-                        </MudTd>
-                        <MudTd DataLabel="Trạng thái thanh toán">@context["PayStatus"].ToString()</MudTd>
-                        <MudTd DataLabel="Ngày đặt">
-                            @(DateTime.Parse(context["BillCreatedAt"].ToString()).ToString("dd/MM/yyyy"))
-                        </MudTd>
-                    </RowTemplate>
-                </MudTable>
-
-
-            </ActivatorContent>
-
-        </MudMenu>
-    </div>
-    @if (topProducts != null && topProducts.Any())
-    {
-        <MudText Typo="Typo.h6">Sản phẩm bán chạy</MudText>
-        <MudTable Items="topProducts" Hover="true" Bordered>
-            <HeaderContent>
-                <MudTh>Tên sản phẩm</MudTh>
-                <MudTh>Tổng số lượng</MudTh>
-                <MudTh>Giá sản phẩm</MudTh>
-            </HeaderContent>
-            <RowTemplate>
-                <MudTd DataLabel="Tên sản phẩm">@context.ProductName</MudTd>
-                <MudTd DataLabel="Tổng số lượng">@context.TotalQuantity</MudTd>
-                <MudTd DataLabel="Giá sản phẩm">@context.Price.ToString("#,##0") vnđ </MudTd>
-            </RowTemplate>
-        </MudTable>
-    }
-
-
-}
-
 
 @code {
     private Role role = new();
@@ -294,17 +184,6 @@ else if (userRoleId == "1")
         duDoanDoanhThu = DuDoanDoanhThuThangToi(result.doanhThu, 0.05m);
         await LoadBills();
     }
-
-    // public void Timkiem()
-    // {
-    //     _loading = true;
-    //     DB.Set_Connect(_config?.GetConnectionString("DefaultConnection") ?? throw new InvalidOperationException("Không tồn tại chuỗi kết nối 'Default Connection'."));
-    //     dt = DB.GetOrderbyDate( fromDate ?? DateTime.Today, toDate ?? DateTime.Today);
-
-    //     _loading = false;
-    //     CultureInfo culture = CultureInfo.GetCultureInfo("vi-VN");
-    //     StateHasChanged();
-    // }
     private string? userRoleId;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
