--- a/Components/Pages/Ql/AnhNoiBat.razor
+++ b/Components/Pages/Ql/AnhNoiBat.razor
@@ -16,12 +16,12 @@
 @using BanSach.Components.Data
 @inject AppDbContext AppDbContext
 @inject IDialogService DialogService
-        @if (userRoleId == "2")
-        {
-            <h3>Bạn chưa được cấp quyền để xem trang này.</h3>
-        }
-        else if (userRoleId == "3")
-        {
+@if (userRoleId == "2")
+{
+    <h3>Bạn chưa được cấp quyền để xem trang này.</h3>
+}
+else if (userRoleId == "3")
+{
     <div style="display:flex; justify-content: space-between; padding: 30px 30px 0 30px;">
         <h2 style="font-family:Arial;">Quản lý ảnh nổi bật</h2>
         <MudSpacer></MudSpacer>
@@ -38,8 +38,8 @@
                             <div style="position: relative; width: 100%; overflow: hidden; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
                                 <img src="@img.img" alt="Product Image" style="width: 100%; height: 200px; object-fit: cover; display: block;" />
                                 <MudIconButton Icon="@Icons.Material.Filled.Close"
-                                 OnClick="@((e) => DeleteAsync(img))" Color="Color.Error" Size="Size.Small"
-                                 Style="position: absolute; top: 8px; right: 8px; border-radius: 50%; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);" />
+                                OnClick="@((e) => DeleteAsync(img))" Color="Color.Error" Size="Size.Small"
+                                Style="position: absolute; top: 8px; right: 8px; border-radius: 50%; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);" />
                             </div>
                         </MudItem>
                     }
@@ -48,14 +48,14 @@
             }
         </MudItem>
     </MudGrid>
-        }
-        else if (userRoleId == "1")
-        {
+}
+else if (userRoleId == "1")
+{
     <div style="display:flex; justify-content: space-between; padding: 30px 30px 0 30px;">
         <h2 style="font-family:Arial;">Quản lý ảnh nổi bật</h2>
         <MudSpacer></MudSpacer>
         <MudButton OnClick="@((e) => CreateAsync(img))" ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto">Thêm</MudButton>
-       
+
     </div>
     <MudPaper Class="pa-4">
         <MudStack Spacing="2">
@@ -92,10 +92,10 @@
                             <div style="position: relative; width: 100%; overflow: hidden; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
                                 <img src="@img.img" alt="Product Image" style="width: 100%; height: 200px; object-fit: cover; display: block;" />
                                 <MudIconButton Icon="@Icons.Material.Filled.Close"
-                                               OnClick="@((e) => DeleteAsync(img))"
-                                               Color="Color.Error"
-                                               Size="Size.Small"
-                                               Style="position: absolute; top: 8px; right: 8px; border-radius: 50%; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);" />
+                                OnClick="@((e) => DeleteAsync(img))"
+                                Color="Color.Error"
+                                Size="Size.Small"
+                                Style="position: absolute; top: 8px; right: 8px; border-radius: 50%; background-color: white; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);" />
                             </div>
                         </MudItem>
                     }
@@ -104,9 +104,9 @@
             }
         </MudItem>
     </MudGrid>
-    
-        }
-    
+
+}
+
 
 
 @code {
@@ -130,7 +130,7 @@
             System.Diagnostics.Debug.WriteLine("Lỗi trong OnInitializedAsync: " + ex.Message);
         }
     }
-    
+
 
 
     private List<LogAnhNoiBat> logs = new List<LogAnhNoiBat>();
@@ -165,6 +165,8 @@
 
             AppDbContext.Logs.Add(log);
             await AppDbContext.SaveChangesAsync(); // Save log to the database
+            imgs = await ItemManagement.GetAllImgsDescending();
+            StateHasChanged();
         }
     }
 
