--- a/Components/Pages/Ql/VanDon.razor
+++ b/Components/Pages/Ql/VanDon.razor
@@ -265,8 +265,9 @@
                 if (deletedBill != null)
                 {
                     pagedItems.Remove(deletedBill);
+                    
                 }
-                await LoadDeliveryList();
+             
                 StateHasChanged();
             }
             else
@@ -294,9 +295,9 @@
                 if (updatedBill != null)
                 {
                     updatedBill.ApproveBill = true;
-                   
+                    updatedBill.Status = "Completed";
                 }
-                await LoadDeliveryList();
+               
                 StateHasChanged();
             }
             else
